--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Wild séries</title>
-</head>
-<body>
+{% extends "base.html.twig" %}
+
+{% block body %}
     <h1> {{website}} index</h1>
-</body>
-</html>
+{% endblock %}
+
