--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,14 +1,20 @@
 {% extends 'base.html.twig' %}
 
-
 {% block title %}All programs{% endblock %}
 
 {% block body %}
 
     <h1>Toutes les séries de la table program : </h1>
+
     {% for program in programs %}
         <div>
-            <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+            {{ loop.index }} / {{ program.title }} 
+                {% if program.category is null %}
+                    <p>Pas de catégorie</p>
+                {% else %}
+                <h2>- Catégorie : {{ program.category.name }}</h2>
+                {% endif %}
+                 
             <p>{{ program.summary }}</p>
             <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
         </div>
