--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -12,7 +12,7 @@
                 {% if program.category is null %}
                     <p>Pas de catégorie</p>
                 {% else %}
-                <h2>- Catégorie : {{ program.category.name }}</h2>
+                <h2>Catégorie : {{ program.category.name }}</h2>
                 {% endif %}
                  
             <p>{{ program.summary }}</p>
