--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href=" {{ path("app_index") }} ">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href=" {{ path("category_index") }} ">Catégories</a>
+          <a class="nav-link" href=" {{ path("program_index") }} ">Programes</a>
+          <a class="nav-link" href=" {{ path("episode_index") }} ">Episodes</a>
+          <a class="nav-link active" aria-current="page" href="{{ path("season_index") }}">Saisons</a>
         </div>
       </div>
     </div>
