--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -10,7 +10,7 @@
     {% for program in programs %}
         <div>
 
-            <h2>{{ program.id }} / {{ program.title }}</h2>
+            <h2>{{ program.title }}</h2>
 
             <p>{{ program.summary }}</p>
 
