Pleins de choses

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,11 +1,11 @@
-$primary: #224652;
+$primary: #396a7a;
 $danger: #ec6f54;
 
 
 @import "~bootstrap/scss/bootstrap";
 
 body {
-    background-color: rgb(165, 114, 114);
+    background-color: rgb(247, 244, 244);
 }
 
 
