--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -7,6 +7,8 @@
     <h1>Liste des catégories : </h1>
 
     {% for category in categories %}
-        <a href=" {{ path("category_show", {categoryName: category.name})}}">{{category.name}}</a>
+        <ul>
+            <li><a href=" {{ path("category_show", {categoryName: category.name})}}">{{category.name}}</a></li>
+        </ul>
     {% endfor %}
 {% endblock %}
