--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -19,7 +19,7 @@
                 {% endif %}
                 
             <p>{{ program.summary }}</p>
-            <a class="btn btn-primary" href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+            <a class="btn btn-primary" href="{{ path("program_show", { slug: program.slug }) }}">Voir la fiche</a>
         </div>
     {% else %}
         Aucune série trouvée.
