--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,6 +10,12 @@
           <a class="nav-link" href=" {{ path("program_index") }} ">Programes</a>
           <a class="nav-link" href=" {{ path("episode_index") }} ">Episodes</a>
           <a class="nav-link active" aria-current="page" href="{{ path("season_index") }}">Saisons</a>
+          {% if app.user %}
+            {{ app.user.email }}
+            <a class="nav-link" href="{{ path('app_logout') }}"> Se déconnecter</a>
+          {% else %}
+            <a class="nav-link" href="{{ path('login') }}"> Se connecter</a>
+          {% endif %}
         </div>
       </div>
     </div>
