--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -15,27 +15,26 @@
             {% for season in seasons %}
                  <a href=" {{ path("program_season_show", {programId: program.id, seasonId: season.id}) }}">{{season.number}}</a>
             {% endfor %}
+
+
         </div>
     </div>
 
     <strong>Acteurs :</strong>
 
-<ul>
+    <ul>
+        {% for actor in program.actors %}
+            <li><a href="{{path('actor_show', {id: actor.id})}}">{{ actor.name }} </a></li>
+        {% else %}
+            <li>Aucun acteur pour cette série</li>
+        {% endfor %}
+    </ul>
 
-    {% for actor in program.actors %}
+    <ul>
 
-        <li><a href="{{path('actor_show', {id: actor.id})}}">{{ actor.name }} </a></li>
+    </ul>
+       <li><a href=" {{ path("program_edit", { slug: program.slug } ) }}">edit</a></li> 
 
-    {% else %}
-
-        <li>Aucun acteur pour cette série</li>
-
-    {% endfor %}
-
-</ul>
-
-    <a href="{{ path('program_index') }}">
-        Retour à la liste des programmes
-    </a>
+       <li><a href="{{ path('program_index') }}">Retour à la liste des programmes </a></li> 
 
 {% endblock %}
