--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -15,7 +15,7 @@
                 <p class="text-justify">{{ program.summary }}</p>
 
                 {# Lien vers la fiche de la série #}
-                <a href="{{ path("program_show", { id: program.slug }) }}" class="btn btn-primary">Voir la fiche</a>
+                <a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-primary">Voir la fiche</a>
             </div>
         </div>
     {% else %}
